# backgammon

./: AGENTS.md  BRIEF-SIG-296.md  Cargo.toml  PLAN.md  README.md  SPEC.md  index.html
.cargo/: config.toml
.github/workflows/: ci.yml
.hermes/briefs/: SIG-310-match-equity-table.md  SIG-315-fix-nn-evaluation.md
gnubg-cli/: Cargo.toml  PGO.md
gnubg-cli/src/: main.rs
gnubg-eval/: Cargo.toml
gnubg-eval/src/: classify.rs  contact.rs  crashed.rs  cubeful.rs  inputs.rs  lib.rs  met.rs  neuralnet.rs  race.rs  sanity.rs  weights.rs
gnubg-eval/tests/: cross_validation.rs  met.rs
gnubg-eval/tests/c-ref/: Makefile  README.md  harness.c
gnubg-moves/: Cargo.toml
gnubg-moves/src/: lib.rs
gnubg-search/: Cargo.toml
gnubg-search/src/: lib.rs  search.rs  transposition.rs
gnubg-sys/: Cargo.toml  build.rs
gnubg-sys/src/: lib.rs
gnubg-types/: Cargo.toml
gnubg-types/src/: lib.rs
gnubg-wasm/: Cargo.toml
gnubg-wasm/src/: lib.rs
wasm/: gnubg_wasm.d.ts  gnubg_wasm.js  gnubg_wasm_bg.wasm  gnubg_wasm_bg.wasm.d.ts
