[package]
name = "gnubg-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "gnubg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
gnubg-eval = { path = "../gnubg-eval" }
gnubg-search = { path = "../gnubg-search" }
gnubg-sys = { path = "../gnubg-sys" }
mimalloc = "0.1"
rayon = "1.10"
