[package]
name = "gnubg-eval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gnubg-sys = { path = "../gnubg-sys" }
gnubg-types = { path = "../gnubg-types" }
rayon = { version = "1.10", optional = true }

[features]
default = ["rayon"]
wasm = []
