[package]
name = "gnubg-moves"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Legal move generation for GNU Backgammon (pure Rust)"

[dependencies]
gnubg-types = { path = "../gnubg-types" }

[dev-dependencies]
gnubg-sys = { path = "../gnubg-sys" }
