[package]
name = "gnubg-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core data types for GNU Backgammon engine (board, move, position ID, match ID)"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serialize = ["serde"]
