[package]
name = "gnubg-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
gnubg-eval = { path = "../gnubg-eval", default-features = false, features = ["wasm"] }
gnubg-search = { path = "../gnubg-search", default-features = false, features = ["wasm"] }
gnubg-types = { path = "../gnubg-types" }
gnubg-moves = { path = "../gnubg-moves" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"

[features]
wasm = ["gnubg-eval/wasm", "gnubg-search/wasm"]
